<resources>
    <string name="app_name">EmandiTask</string>
    <string name="welcome">Welcome!</string>
    <string name="all_orders">All Orders</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart">Cart</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="place_order">Place order</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_placed_success">Your order was placed successfully</string>
    <string name="view_all_orders">VIEW ALL ORDERS</string>
    <string name="go_home">Go Home</string>
</resources>