<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        style="@style/TextviewStyle"
        android:drawableLeft="@drawable/ic_back"
        android:drawablePadding="5dp"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/textview_all_orders"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/textview_welcome"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_cart"
        style="@style/TextviewStyleViewAll"
        app:layout_constraintStart_toEndOf="@id/textview_welcome"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/guideline5"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="end"
        android:id="@+id/textview_all_orders"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/layout_inner"
        android:background="@color/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_place_order">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/layout_recycleview">

            <TextView
                android:id="@+id/textview_total_price_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Item Total"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textview_total_price"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:id="@+id/textview_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="23349343"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/textview_total_price_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



            <TextView
                android:id="@+id/textview_discount_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Discount"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textview_discount"
                app:layout_constraintTop_toBottomOf="@id/textview_total_price_head"/>


            <TextView
                android:id="@+id/textview_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="23349343"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/textview_discount_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_total_price"/>



            <TextView
                android:id="@+id/textview_taxes_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Taxes"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textview_taxes"
                app:layout_constraintTop_toBottomOf="@id/textview_discount_head"/>


            <TextView
                android:id="@+id/textview_taxes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="23349343"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/textview_taxes_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_discount"/>


            <TextView
                android:id="@+id/textview_final_amount_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Final Amount"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textview_final_amount"
                app:layout_constraintTop_toBottomOf="@id/textview_taxes_head"/>


            <TextView
                android:id="@+id/textview_final_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="806"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="24dp"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/textview_final_amount_head"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_taxes"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/layout_recycleview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/layout_summary"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@id/recycleview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/layout_place_order"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        android:background="@drawable/price_bg">


        <TextView
            android:id="@+id/textview_total_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="200 items"
            android:textAllCaps="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textview_add_to_cart"
            app:layout_constraintBottom_toTopOf="@id/textview_price"
            style="@style/TextviewStyleSmallWhite12" />



        <TextView
            android:id="@+id/textview_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="768.00"
            android:textAllCaps="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_total_items"
            app:layout_constraintEnd_toStartOf="@id/textview_add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/TextviewStylePrice"/>


        <TextView
            android:id="@+id/textview_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:textAllCaps="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextviewStyleSmallWhite14" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>